tests/decoding/snapshots/decoding__png_suite__s09n3p02.snap
---
source: tests/decoding/main.rs
expression: png
---
PNG {
    header: IHDRChunk {
        width: 9,
        height: 9,
        bit_depth: 2,
        color_type: IndexedColor,
        compression_method: 0,
        filter_method: 0,
        interlace_method: 0,
    },
    pixels: [
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
    ],
}
